# libaribb25

./: .gitignore  .tarball-version  LICENCE  Makefile.am  README.jp.txt  README.md  configure.ac
.github/workflows/: libaribb25_build_test.yml  release.yml
src/: arib25.pc.in  arib_std_b25.c  arib_std_b25.h  arib_std_b25_error_code.h  aribb25api.h  b_cas_card.c  b_cas_card.h  b_cas_card_error_code.h  multi2.c  multi2.h  multi2_error_code.h  portable.h  td.c  ts_common_types.h  ts_section_parser.c  ts_section_parser.h  ts_section_parser_error_code.h
